# kotori-cli-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  main.rs
src/commands/: command_base.rs  key.rs  key_create.rs  key_create_upsert.rs  key_delete.rs  key_list.rs  kotori_command.rs  kotori_group_command.rs  mod.rs  project.rs  project_create_upsert.rs  project_delete.rs  project_list.rs
