[package]
name = "kotori-cli-rs"
version = "0.1.0"
authors = ["Martin Pešek <pesek.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kotorihq/kotori-cli-rs"

[dependencies]
clap = "2.31.1"
hyper = "0.11.22"
url = "1.7.0"
reqwest = "0.8.5"
serde = "1.0.33"
serde_derive = "1.0.33"
