[package]
name = "kotori-cli-rs"
version = "0.1.0"
authors = ["Martin Pešek <pesek.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kotorihq/kotori-cli-rs"

[dependencies]
clap = "2.32.0"
hyper = "0.11.27"
url = "1.7.1"
reqwest = "0.8.8"
serde = "1.0.78"
serde_derive = "1.0.78"
failure = "0.1.2"
